Possible errors introduced in the new SSS implementation (in the days after it was committed) #47356

Closed
opened 2016-02-07 21:27:14 +01:00 by Adam Friesen · 7 comments

System Information
Win10 64 bit, an ATI 7xxx GPU, 24 gigs RAM, third gen i7 processor

Blender Version
Broken: hash 578f70f
Worked: hash da7ddb6

Short description of error
Very recent tweaks to the new SSS model seems to have introduces what appears to be pronounced steps in the terminator when the radius has different values for the red, green, and blue channels. This did not exist in the initial implementation and is far harsher than simple cubic scattering. This being with CPU rendering by the way).

Exact steps for others to reproduce the error
Download the .blend file and render, here's an image of what to expect depending on the builds (I will also note that there were no settings whatsoever that were changed).
SSSerrors.jpg

.blend
SSScube.blend

I know the implementation still has a WIP component to it, but I do think the recent tweaks may have made it less correct instead of more.

**System Information** Win10 64 bit, an ATI 7xxx GPU, 24 gigs RAM, third gen i7 processor **Blender Version** Broken: hash 578f70f Worked: hash da7ddb6 **Short description of error** Very recent tweaks to the new SSS model seems to have introduces what appears to be pronounced steps in the terminator when the radius has different values for the red, green, and blue channels. This did not exist in the initial implementation and is far harsher than simple cubic scattering. This being with CPU rendering by the way). **Exact steps for others to reproduce the error** Download the .blend file and render, here's an image of what to expect depending on the builds (I will also note that there were no settings whatsoever that were changed). ![SSSerrors.jpg](https://archive.blender.org/developer/F280740/SSSerrors.jpg) **.blend** [SSScube.blend](https://archive.blender.org/developer/F280742/SSScube.blend) I know the implementation still has a WIP component to it, but I do think the recent tweaks may have made it less correct instead of more.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Ace_Dragon

Added subscriber: @Ace_Dragon
Author

Here's a better illustration of the terminator error (with a lot more samples together with a curve adjustment to show it is not a product of undersampling)
SSSerrors2.jpg

You can practically see lines in the falloff, I don't think that's supposed to happen.

Here's a better illustration of the terminator error (with a lot more samples together with a curve adjustment to show it is not a product of undersampling) ![SSSerrors2.jpg](https://archive.blender.org/developer/F280745/SSSerrors2.jpg) You can practically see lines in the falloff, I don't think that's supposed to happen.
Sergey Sharybin self-assigned this 2016-02-08 13:53:20 +01:00

This issue was referenced by dae8326d1e

This issue was referenced by dae8326d1e98632be42e525011c061d46c1d0e2a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by blender/cycles@cc8180a24d

This issue was referenced by blender/cycles@cc8180a24dbad4fb5ec4ec4dcd4cd4e8badc174e

Please refer to commit notes for 69dc0c3. The original patch for this report wasn't correct and Burley is not expected to be that much smoother actually for the same mean free path distance.

Please refer to commit notes for 69dc0c3. The original patch for this report wasn't correct and Burley is not expected to be that much smoother actually for the same mean free path distance.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47356
No description provided.