Fix T47356: Too sharp falloww with Burley BSSRDF

After the clamping commit we need to bump BURLEY_TRUNCATE
constant a bit, otherwise mean free path does not really
match the disk radius needed for importance sampling.